--- a/air-aang.html
+++ b/air-aang.html
@@ -9,72 +9,77 @@
 </head>
 
 <body>
-    <section class="High">
+  
+        <div class="x-moviment">
+        <section class="High">
 
-    </section>
-    <section class="cycle-avatar">
-        <div class="txt-cycle"><span>O Avatar, que pode ser homem ou mulher, é um árbitro internacional cujo dever é manter a harmonia entre as quatro nações e atuar como um mediador entre seres humanos e espíritos. Quando o Avatar morre, o seu espírito é reencarnado no próximo Avatar, que será da próxima nação em uma sequência conhecida como o ciclo do Avatar: Nação do Fogo, Nômades do Ar, Tribos da Água, e Reino da Terra. Todo Avatar precisa se tornar um mestre em cada estilo de dominação, começando com o elemento de sua própria nação, e procedendo para os outros segundo dita o ciclo do Avatar</span></div>
-        <div class="cycle-img"></div>
-    </section>
-    <section class="latest-avatars">
-        <div class="box-card">
-            <div class="kyoshi-card card"></div>
-            <div class="roku-card card"></div>
-            <div class="aang-card card"></div>
-            <div class="korra-card card"></div>
-        </div>
-    </section>
-    <section class="origin">
-        <div class="earth-card element">
-            <div class="container-img">
-                <div class="img-card toupeira-img"></div>
+        </section>
+        <section class="cycle-avatar">
+            <div class="txt-cycle"><span>O Avatar, que pode ser homem ou mulher, é um árbitro internacional cujo dever é
+                    manter a harmonia entre as quatro nações e atuar como um mediador entre seres humanos e espíritos.
+                    Quando o Avatar morre, o seu espírito é reencarnado no próximo Avatar, que será da próxima nação em
+                    uma sequência conhecida como o ciclo do Avatar: Nação do Fogo, Nômades do Ar, Tribos da Água, e
+                    Reino da Terra. Todo Avatar precisa se tornar um mestre em cada estilo de dominação, começando com o
+                    elemento de sua própria nação, e procedendo para os outros segundo dita o ciclo do Avatar</span>
             </div>
-            <div class="container-txt">
-                <h1 class="title-txt">Topeiras-Texugo</h1>
-                <span class="txt-card">De acordo com a lenda, os primeiros dominadores de Terra aprenderam esta arte com as Texugo-Toupeiras, devido à capacidade destes animais escavarem a terra e gerarem terremotos.</span>
+            <div class="cycle-img"></div>
+        </section>
+        <section class="latest-avatars">
+            <div class="box-card">
+                <div class="kyoshi-card card"></div>
+                <div class="roku-card card"></div>
+                <div class="aang-card card"></div>
+                <div class="korra-card card"></div>
             </div>
-        </div>
-        <div class="fire-card element"> 
-            <div class="container-img">
-                <div class="img-card dragon"></div>
+        </section>
+
+        <section class="origin">
+            <div class="earth-card element">
+                <div class="container-img">
+                    <div class="img-card toupeira-img"></div>
+                </div>
+                <div class="container-txt">
+                    <h1 class="title-txt">Topeiras-Texugo</h1>
+                    <span class="txt-card">De acordo com a lenda, os primeiros dominadores de Terra aprenderam esta arte
+                        com as Texugo-Toupeiras, devido à capacidade destes animais escavarem a terra e gerarem
+                        terremotos.</span>
+                </div>
             </div>
-            <div class="container-txt">
-                <h1 class="title-txt">Dragões</h1>
-                <span class="txt-card">De acordo com a lenda, os primeiros dominadores de fogo aprenderam esta arte com os dragões, devido à capacidade destes animais de cuspir e controlar o fogo com maestria.</span>
+            <div class="fire-card element">
+                <div class="container-img">
+                    <div class="img-card dragon"></div>
+                </div>
+                <div class="container-txt">
+                    <h1 class="title-txt">Dragões</h1>
+                    <span class="txt-card">De acordo com a lenda, os primeiros dominadores de fogo aprenderam esta arte
+                        com os dragões, devido à capacidade destes animais de cuspir e controlar o fogo com
+                        maestria.</span>
+                </div>
             </div>
-        </div>
-        <div class="air-card element">
-            <div class="container-img">
-                <div class="img-card bisao-img"></div>
+            <div class="air-card element">
+                <div class="container-img">
+                    <div class="img-card bisao-img"></div>
+                </div>
+                <div class="container-txt">
+                    <h1 class="title-txt">Bisões Voadores</h1>
+                    <span class="txt-card"> De acordo com a lenda, os nômades do ar aprenderam a dominação ao observaram
+                        os bisões voadores, que agitavam o ar ao baterem suas caudas assim dominando todos os ventos.
+                    </span>
+                </div>
             </div>
-            <div class="container-txt">
-                <h1 class="title-txt">Bisões Voadores</h1>
-                <span class="txt-card"> De acordo com a lenda, os nômades do ar aprenderam a dominação ao observaram os bisões voadores, que agitavam o ar ao baterem suas caudas assim dominando todos os ventos. </span>
+            <div class="water-card element">
+                <div class="container-img">
+                    <div class="img-card moon"></div>
+                </div>
+                <div class="container-txt">
+                    <h1 class="title-txt">Lua</h1>
+                    <span class="txt-card"> De acordo com a lenda, os primeiros dominadores de água aprenderam esta arte
+                        ao observarem a lua, assim como seu efeito sobre as marés, empurrando-as e puxando-as. </span>
+                </div>
             </div>
-        </div>
-        <div class="water-card element">
-            <div class="container-img">
-                <div class="img-card moon"></div>
-            </div>
-            <div class="container-txt">
-                <h1 class="title-txt">Lua</h1>
-                <span class="txt-card"> De acordo com a lenda, os primeiros dominadores de água aprenderam esta arte ao observarem a lua, assim como seu efeito sobre as marés, empurrando-as e puxando-as. </span>
-            </div>
-        </div>
-        
-    </section>
-    <section class="animals">
-        <h1>Animais do Mundo Avatar</h1>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </section>
+
+        </section>
+    </div>
 </body>
 
 </html>
