--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
 <body>
     <section id="home" class="home">
         <div class="background-home"></div>
-        <div class="info-home">
-            <h1 class="title-home">Avatar Boost</h1>
-            <p class="txt-home">The Last Airbender</p>
-        </div>
+        <div class="info-home"></div>
         <nav id="nav">
             <a href="#home" class="home-button standard"></a>
             <a href="#history" class="history-button standard">História</a>
@@ -65,7 +62,7 @@
 
         <section id="fire" class="fire">
             <div class="txt-fire">
-                <h1 class="font-effect-fire">Agni Kai</h1>
+                <h1 >Agni Kai</h1>
                 <p>Agni Kai é o nome para duelos entre dobradores de fogo. Alguns, mas não
                     todos,
                     são até a
@@ -79,7 +76,7 @@
                     adversário (como evidência, a cicatriz de Zuko).
                 </p>
                 <p class="txt-scd">Participe de um Agni Kai Agora</p>
-                <a class="button-agnikai" href="fire-AgniKai.html">Entrar</a>
+                <a class="button-agnikai go" href="fire-AgniKai.html">Entrar</a>
             </div>
             <div class="zuko-fire"></div>
         </section>
@@ -99,7 +96,7 @@
                     impedit enim aperiam inventore perferendis et aspernatur accusamus iure tempore quasi.
                     Exercitationem iste sequi suscipit dicta iusto porro beatae architecto atque.
                 </p>
-                <a class="button-dobra" href="">Entrar</a>
+                <a class="button-air go" href="">Entrar</a>
             </div>
         </section>
 
@@ -140,7 +137,7 @@
                     impedit enim aperiam inventore perferendis et aspernatur accusamus iure tempore quasi.
                     Exercitationem iste sequi suscipit dicta iusto porro beatae architecto atque.
                 </p>
-                <a class="button-dobra" href="earth-toph.html">Entrar</a>
+                <a class="button-earth go" href="earth-toph.html">Entrar</a>
             </div>
         </section>
         <section id="aboutMe" class="aboutMe"></section>
