subindo alterações feitas em aula agni kai e login

--- a/alert.html
+++ b/alert.html
@@ -9,13 +9,14 @@
 <body>
     <div class="login-card">
         <div class="txt-card-login">
-            <p>Faça o Login</p>
-            <span>Para acessar áreas de dobras Elementais você precisa estar logado.</span>
+            <p>🚨Faça o Login</p>
+            <span>Para acessar áreas de dobras elementais você precisa estar logado.</span>
         </div>
         <div class="button-card-login">
-            <span>Fazer-Login</span>
-            <span>Sair</span>
+            <span class="button-exit alert">Sair</span>
+            <span class="button-register alert">Fazer-Login</span>
         </div>
     </div>
 </body>
 </html>
+
