--- a/cadastrologin.html
+++ b/cadastrologin.html
@@ -22,7 +22,7 @@
                 <span>Senha</span>
                 <input type="password" id="input_password">
             </div>
-            <button class="btn">Acessar</button>
+            <button class="btn signIn">Acessar</button>
             <span>Você não tem uma conta? <span class="blue" onclick="mudar()">Cadastrar</span></span>
 
         </div>
@@ -57,7 +57,7 @@
                 <input type="radio" id="ar" name="dobra" value="ar">
                 <label for="ar">Ar</label><br><br>
             </form>
-            <button class="btn">Cadastrar</button>
+            <button class="btn signUp">Cadastrar</button>
             <span>Você já tem uma conta? <span class="red" onclick="mudar2()">Fazer login</span></span>
 
         </div>
