--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     impedit enim aperiam inventore perferendis et aspernatur accusamus iure tempore quasi.
                     Exercitationem iste sequi suscipit dicta iusto porro beatae architecto atque.
                 </p>
-                <a class="button-air go" href="">Entrar</a>
+                <a class="button-air go" href="air-aang.html">Entrar</a>
             </div>
         </section>
 
@@ -114,10 +114,7 @@
                     impedit enim aperiam inventore perferendis et aspernatur accusamus iure tempore quasi.
                     Exercitationem iste sequi suscipit dicta iusto porro beatae architecto atque.
                 </p>
-                <button class="button">
-                    <span class="liquid"></span>
-                    <span class="btn-txt">Entrar</span>
-                </button>
+                <a class="button-water go" href="earth-toph.html">Entrar</a>
             </div>
             <div class="katara-water"></div>
         </section>
