--- a/public/earth-toph.html
+++ b/public/earth-toph.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nabla&display=swap" rel="stylesheet">
     <title>Toph Game</title>
-    <link rel="stylesheet" href="toph.css">
+    <link rel="stylesheet" href="css/toph.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
             <div id="btnRight" class="btn" style="display: none;"><span>Right</span></div>
         </div>
     </section>
-    <script src="toph.js"></script>
+    <script src="js/toph.js"></script>
 </body>
 
 </html>
