--- a/public/fire-AgniKai.html
+++ b/public/fire-AgniKai.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="AgniKai.css" />
+    <link rel="stylesheet" href="css/AgniKai.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
@@ -13,11 +13,11 @@
 
 <body>
     <audio autoplay loop>
-        <source src="assets/agniKaiTheme.mp3" type="audio/mpeg">
+        <source src="/public/assets/agniKaiTheme.mp3" type="audio/mpeg">
     </audio>
     <!--  Background 01 - FIRE -->
     <div class="videoBackground">
-        <video src="assets/FireBackground.mp4" loop muted autoplay></video>
+        <video src="/public/assets/FireBackground.mp4" loop muted autoplay></video>
     </div>
 
     <div class="toptext">
@@ -74,4 +74,4 @@
 </body>
 
 </html>
-<script src="agniKai.js"></script>
+<script src="js/agniKai.js"></script>
