--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=fire">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/AangCard .jpg">
     <title>Avatar Boost</title>
 </head>
 
@@ -53,7 +53,7 @@
                     modo que o Avatar não renasça.</p>
             </div>
             <div class="trailer-history">
-                <iframe class="trailer" src=" https://www.youtube.com/embed/ooVvH2IYz0w?si=wQKaG_XDRIV2RWNU"
+                <iframe class="trailer" src="https://www.youtube.com/embed/ooVvH2IYz0w?si=wQKaG_XDRIV2RWNU"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -61,8 +61,8 @@
         </section>
 
         <section id="fire" class="fire">
-            <div class="txt-fire">
-                <h1 >Agni Kai</h1>
+            <div class="txt-fire txt">
+                <h1>Agni Kai</h1>
                 <p>Agni Kai é o nome para duelos entre dobradores de fogo. Alguns, mas não
                     todos,
                     são até a
@@ -83,7 +83,7 @@
 
         <section class="air" id="air">
             <div class="aang-air"></div>
-            <div class="txt-air">
+            <div class="txt-air txt">
                 <h1>Avatares</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet cumque amet doloremque culpa
                     aliquid sed officiis, nihil neque dolore voluptatum fugiat distinctio facilis est, modi, quae
@@ -92,16 +92,14 @@
                     distinctio natus incidunt libero facere adipisci sit accusamus.Lorem ipsum dolor, sit amet
                     consectetur adipisicing elit. Consequuntur iste asperiores dolores. Fuga
                     sunt, provident cupiditate illum aliquid aut minima aspernatur consequatur nisi incidunt, commodi
-                    quis delectus totam magni? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati
-                    impedit enim aperiam inventore perferendis et aspernatur accusamus iure tempore quasi.
-                    Exercitationem iste sequi suscipit dicta iusto porro beatae architecto atque.
+                    
                 </p>
                 <a class="button-air go" href="air-aang.html">Entrar</a>
             </div>
         </section>
 
         <section class="water" id="water">
-            <div class="txt-water">
+            <div class="txt-water txt">
                 <h1>Avatares</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet cumque amet doloremque culpa
                     aliquid sed officiis, nihil neque dolore voluptatum fugiat distinctio facilis est, modi, quae
@@ -109,10 +107,7 @@
                     Dolore quidem nostrum ea deleniti tempore porro, illo voluptas numquam nobis quaerat. Quae suscipit
                     distinctio natus incidunt libero facere adipisci sit accusamus.Lorem ipsum dolor, sit amet
                     consectetur adipisicing elit. Consequuntur iste asperiores dolores. Fuga
-                    sunt, provident cupiditate illum aliquid aut minima aspernatur consequatur nisi incidunt, commodi
-                    quis delectus totam magni? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati
-                    impedit enim aperiam inventore perferendis et aspernatur accusamus iure tempore quasi.
-                    Exercitationem iste sequi suscipit dicta iusto porro beatae architecto atque.
+                    
                 </p>
                 <a class="button-water go" href="earth-toph.html">Entrar</a>
             </div>
@@ -121,19 +116,11 @@
 
         <section class="earth" id="earth">
             <div class="toph-earth"></div>
-            <div class="txt-earth">
-                <h1>Avatares</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet cumque amet doloremque culpa
-                    aliquid sed officiis, nihil neque dolore voluptatum fugiat distinctio facilis est, modi, quae
-                    pariatur accusamus deleniti adipisci?Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Dolore quidem nostrum ea deleniti tempore porro, illo voluptas numquam nobis quaerat. Quae suscipit
-                    distinctio natus incidunt libero facere adipisci sit accusamus.Lorem ipsum dolor, sit amet
-                    consectetur adipisicing elit. Consequuntur iste asperiores dolores. Fuga
-                    sunt, provident cupiditate illum aliquid aut minima aspernatur consequatur nisi incidunt, commodi
-                    quis delectus totam magni? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati
-                    impedit enim aperiam inventore perferendis et aspernatur accusamus iure tempore quasi.
-                    Exercitationem iste sequi suscipit dicta iusto porro beatae architecto atque.
+            <div class="txt-earth txt">
+                <h1>Toph Game</h1>
+                <p>Toph Beifong, também conhecida como Toph, é uma mestra na Dobra de Terra, uma das mais poderosas de seu tempo, e a descobridora da Dobra de Metal. Cega desde o nascimento, Toph foi tratada constantemente de maneira superprotetora por causa de sua "inabilidade", particularmente por seus pais ultra protetores, Lao e Poppy Beifong. Ao descobrir Toupeiras-Texugo, animais que dominavam a Terra e que também eram cegos, ela aprendeu a usar a dobra de terra como uma extensão de seus sentidos.
                 </p>
+                <p>Ajude Toph a identificar de onde vem os ataques inimigos.</p>
                 <a class="button-earth go" href="earth-toph.html">Entrar</a>
             </div>
         </section>
@@ -142,4 +129,4 @@
 </body>
 
 </html>
-<script src="home.js"></script>
+<script src="js/home.js"></script>
