--- a/public/air-aang.html
+++ b/public/air-aang.html
@@ -4,7 +4,7 @@
 <head>
     <meta charsettxt-cycle="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="air-aang.css">
+    <link rel="stylesheet" href="css/air-aang.css">
     <title>Dobras</title>
 </head>
 
